# stm32h7-rs

./: Cargo.toml  Readme.md  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
