[package]
name = "stm32h755-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["cm7"] }
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"
stm32h7xx-hal = { version = "0.16.0", features = ["stm32h747cm7"] }

[profile.release]
panic = "abort"
debug = true
lto = true
codegen-units = 1

[profile.dev]
panic = "abort"
debug = true
